--- a/models/model.ipynb
+++ b/models/model.ipynb
@@ -53,7 +53,7 @@
     }
    ],
    "source": [
-    "dataset = pd.read_csv(\"D:/assets/data/ml-latest-small/ml-latest-small/ratings.csv\")\n",
+    "dataset = pd.read_csv(\"../data/ratings.csv\")\n",
     "dataset"
    ]
   },
@@ -232,7 +232,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.save(sae.state_dict(), 'models/new_sae_200.pt')"
+    "torch.save(sae.state_dict(), 'new_sae_200.pt')"
    ]
   },
   {
@@ -258,7 +258,7 @@
    ],
    "source": [
     "model = SAE()\n",
-    "model.load_state_dict(torch.load('models/new_sae_200.pt'))"
+    "model.load_state_dict(torch.load('new_sae_200.pt'))"
    ]
   },
   {
@@ -307,7 +307,7 @@
     "    ids.append(cols[i])\n",
     "# print(ids)\n",
     "\n",
-    "movies = pd.read_csv(\"data/filtered_movies.csv\")\n",
+    "movies = pd.read_csv(\"../data/filtered_movies.csv\")\n",
     "\n",
     "names = []\n",
     "for i in ids:\n",
@@ -316,13 +316,6 @@
     "    names.append(value)\n",
     "print(names)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ]
 }
